--- a/config.json
+++ b/config.json
@@ -2,21 +2,21 @@
     {
         "name": "CSDN净化",
         "desc": "去除多余信息 只保留文章",
-        "path": "./tampermonkey/csdn.user.js"
+        "path": "https://github.com/GitHub-Laziji/plugins/raw/main/tampermonkey/csdn.user.js"
     },
     {
         "name": "w3cschool净化",
         "desc": "去除多余信息 只保留文章",
-        "path": "./tampermonkey/w3cschool.user.js"
+        "path": "https://github.com/GitHub-Laziji/plugins/raw/main/tampermonkey/w3cschool.user.js"
     },
     {
         "name": "知乎去登录",
         "desc": "去除自动弹出登录",
-        "path": "./tampermonkey/zhihu.user.js"
+        "path": "https://github.com/GitHub-Laziji/plugins/raw/main/tampermonkey/zhihu.user.js"
     },
     {
         "name": "Behance下载图片",
         "desc": "不登录下载图片",
-        "path": "./tampermonkey/behance-download-image.user.js"
+        "path": "https://github.com/GitHub-Laziji/plugins/raw/main/tampermonkey/behance-download-image.user.js"
     }
 ]
